cmake_minimum_required(VERSION 3.21)
project(DataStruct2)

set(CMAKE_CXX_STANDARD 11)

add_executable(DataStruct2 HashTable.cpp wet2util.h HashTable.h UnionFind.cpp worldcup23a2.cpp worldcup23a2.h UnionFind.h Player.cpp Player.h Team.cpp Team.h UnionNode.cpp UnionNode.h TestUtils.h MyTests.cpp main23a2.cpp)
